// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in closed state 1`] = `
<button
  className="BurgerButton is-closed"
  onClick={[Function]}
  type="button"
>
  <i
    className="BurgerButton-icon fa fa-bars"
  />
</button>
`;

exports[`renders correctly in open state 1`] = `
<button
  className="BurgerButton is-open"
  onClick={[Function]}
  type="button"
>
  <i
    className="BurgerButton-icon fa fa-close"
  />
</button>
`;
